# email_parsing

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  alembic.ini  data.db-shm  data.db-wal  docker-compose.dev.yml  docker-compose.yml  environment.yml  error.txt  pyproject.toml
alembic/: env.py
alembic/versions/: 0392e1085f80_initial.py  213eea8e6750_add_foreign_key_constraints.py  43b9e1ef282c_add_ticket_model.py  a1b2c3d4e5f6_add_enhanced_ai_log_fields.py  b7c8d9e0f1a2_add_performance_indexes.py  d3b2138e9c4d_add_calendar_event_model.py  d673f9ef1d45_add_email_model.py  de3df2e3b3d0_add_ai_log_model.py  f4e7a2b1c9d0_add_queue_tables.py
backend/: Dockerfile
backend/app/: __main__.py  main.py  reset_db.py  seed.py  stop_dev.py  verify_migrations.py
backend/tests/: conftest.py
docs/: api.md  architecture.md  setup.md  state_flow.txt
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  providers.tsx
shared/schemas/: __init__.py  ai.py  calendar.py  email.py  ticket.py
shared/types/: ai.ts  calendar.ts  email.ts  index.ts  ticket.ts
tasks/phase-1-scaffolding/: epic.md  task-1.1-initialize-backend.md  task-1.2-initialize-frontend.md  task-1.3-shared-schemas.md  task-1.4-dev-environment.md  task-1.5-database-infrastructure.md  task-1.6-setup-logging.md
tasks/phase-10-polish/: epic.md  task-10.1-error-handling.md  task-10.2-comprehensive-logging.md  task-10.3-docker-config.md  task-10.4-db-migrations-seeding.md  task-10.5-integration-testing.md  task-10.6-documentation.md  task-10.7-performance-optimization.md  task-10.8-final-testing.md
tasks/phase-11-intake-pipeline/: epic.md  task-11.1-classification-prompt.md  task-11.2-classification-agent.md  task-11.3-workflow-state-update.md  task-11.4-email-processor-service.md  task-11.5-monitor-wiring.md  task-11.6-integration-tests.md
tasks/phase-12-statemachine-updates/: epic.md  task-12.1-add-denied-status.md  task-12.2-remove-pending-user-approval.md  task-12.3-add-extraction-failed-to-active.md  task-12.4-add-denied-to-closed-statuses.md  task-12.5-wire-denied-into-scheduling-decline.md  task-12.6-recovery-mechanism.md  (+3 more)
(+230 files in other folders)
